@@ -1,6 +1,5 @@
 dpkg (1.9.0) unstable; urgency=low
 
-  * The Copenhagen release
   * Things should mostly work OpenBSD 2.8 as well now
   * Removed all --smallmem code, as smallmem and largemem now actually
     use about the same amount of memory, and largemem is faster.  Both
@@ -53,6 +52,8 @@ dpkg (1.9.0) unstable; urgency=low
   * Mark last argument in dpkg-scanpackages usage info as optional.
     Closes: Bug#86658
   * Fix formatting error in dpkg-source.1. Closes: Bug#82723
+  * Change dpkg-gencontrol to fix comma-related syntax errors after
+    processing substvars
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
