@@ -1,3 +1,8 @@
+Fri Mar  9 19:30:22 CET 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * scripts/controllib.pl: change outputclose to deal with comma-related
+    syntax errors after processing substvars
+
 Mon Mar  5 16:34:55 CET 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * doc/fr/Makefile.in: add more files
